v0.10.5 - Bug Fixes + 1.21.8 (#196)
* Add SonarQube fixes (#184)

* remove unused core constructor

* fix static 'plugin' value being modified by non-static method

* update quests path to a constant

* fix effects variable shadowing

* fix pointless boxed boolean type

* remove unnecessary semicolon

* fix declaring variable just for method return

* fix pointless boxed boolean type

* fix pointless boxed boolean type

* remove unused semicolons

* remove unused string format method

* remove unconventional '_' prefix for unused variables

* remove redundant boolean check

* simplify createActionButton isPresent check

* fix use of generic exception

* remove unnecessary Math.round usage

* fix shadowing variable

* remove unused semicolon

* update variable to conform to typical naming patterns

* fix unnecessary boxed boolean

* fix unnecessary boxed boolean

* remove redundant return statement

* remove usage of Collectors.toList

the method toList exists on streams that can be used instead

* split up Dynamicmyquests.generatePage

* remove double up semicolons

* remove semicolon on comment

* fix unnecessary boxed boolean

* fix shadow variable

* fix shadow variable

* lower method cognitive complexity, kinda

* replace action_id with ActionID var

* replace filter().findFirst().isPresent() with .anyMatch()

* abstract QuestAction labels

* fix unnecessary boxed boolean

* remove unnecessary cast to QuestAction

* remove unnecessary player retrieving

* fix possible null pointer exception with boxed boolean

* remove uncessary quester retrieving

* fix immutable list error

* replace newline char with platform specific

* reduce cognitive complexity of quest inventory body

* replace all newline in string format

* reduce total continue statements to 1 for the loop

* fix unused anyMatch return value

* fix unnecessary boolean literals

* fix misuse of == operator

* fix variables violating standards

* reduce cognitive complexity of quest stage GUI body

* r